# rust-iot-project

./: .gitignore  Cargo.toml  first-time-install.sh
app/: Cargo.toml
app/src/: gui.rs  lib.rs  main.rs  server.rs
berry/python/: __main__.py
src/: main.rs  server.rs
wemos/: wemos.ino
