[package]
name = "rust-iot-project"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
cairo = "0.0.4"
cairo-rs = "0.9.1"
env_logger = "0.9.0"
gio = "0.9.1"
glib = "0.14.8"
gtk = "0.9.2"
plotters = "0.3.1"
plotters-cairo = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
